--- a/src/components/loader.module.css
+++ b/src/components/loader.module.css
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 .main {
   background: #333;
   width: 100vw;
